# native-debug-fail

./: .gitignore  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/kman/issue278621689/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: greeter.cpp
app/src/main/java/org/kman/issue278621689/: Greeter.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/kman/issue278621689/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
modules/greeter/: build.gradle
modules/greeter/src/main/cpp/: greeter.cpp
modules/greeter/src/main/java/org/kman/greeter/: Greeter.java
